--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     <div class="htb">
         <div class="w-container">
-          <h1 class="heading-3">How To Buy $🐲GoldenFlokinomics🐲<br>&zwj;</h1>
+          <h1 class="heading-3">How To Buy $GoldenFlokinomics<br>&zwj;</h1>
         </div>
 
           <div class="htb-box">
@@ -187,15 +187,15 @@
           <div class="htb-box">
             <div class="column-9 w-col w-col-2"><img src="https://uploads-ssl.webflow.com/6145cb68ce3163bda89ebe44/6145de57d598aa5c36b53dae_CAKER3.png" loading="lazy" alt=""></div>
             <div class="htb-box-txt">
-              <h2 class="heading-5">Head on to PancakeSwap and swap for $🐲GoldenFlokinomics🐲</h2>
-              <p> to head on over to PancakeSwap or use this address(0x***)to select 🐲GoldenFlokinomics🐲. Set the slippage tolerance to 15% (sometimes it may be 18%, depending on how much demand there is.)</p>
+              <h2 class="heading-5">Head on to PancakeSwap and swap for $GoldenFlokinomics</h2>
+              <p> to head on over to PancakeSwap or use this address(0x***)to select GoldenFlokinomics. Set the slippage tolerance to 15% (sometimes it may be 18%, depending on how much demand there is.)</p>
             </div>
           </div>
           <div class="htb-box">
             <div class="column-9 w-col w-col-2"><img src="https://uploads-ssl.webflow.com/6145cb68ce3163bda89ebe44/6145e7f1f4830447dc12e491_%E9%9D%A2%E6%80%A7%E9%BA%A6%E5%85%8B%E9%A3%8E.svg" loading="lazy" width="117" alt=""></div>
             <div class="htb-box-txt">
-              <h2 class="heading-5">View $🐲GoldenFlokinomics🐲 and HODL</h2>
-              <p>Swap BNB for 🐲GoldenFlokinomics🐲. Now you need to add 🐲GoldenFlokinomics🐲 to your MetaMask or Trust Wallet to view your $🐲GoldenFlokinomics🐲. Lastly, HODL!</p>
+              <h2 class="heading-5">View $GoldenFlokinomics and HODL</h2>
+              <p>Swap BNB for GoldenFlokinomics. Now you need to add GoldenFlokinomics to your MetaMask or Trust Wallet to view your $GoldenFlokinomics. Lastly, HODL!</p>
             </div>
           </div>
 
